<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/match"
    android:background="@color/sl_white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/SearchToolbar"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/Popup" />

    <ScrollView
        style="@style/match"
        android:layout_below="@id/toolbar"
        android:fillViewport="true"
        android:paddingTop="@dimen/space_XXXS"
        android:background="@color/dark_gray">

        <LinearLayout
            style="@style/block"
            android:orientation="vertical"
            android:paddingLeft="@dimen/space_S"
            android:paddingRight="@dimen/space_S">

            <!--set GONE HERE-->
            <RelativeLayout
                android:id="@+id/ipView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_personal_info_height"
                android:visibility="visible">

                <EditText
                    android:id="@+id/ip_edit_text"
                    style="@style/l_light_gray"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="@color/transparent"
                    android:padding="0dp"
                    android:singleLine="true"
                    android:digits="0123456789."
                    android:inputType="numberDecimal"/>

                <TextView
                    style="@style/m_bright_green"
                    android:layout_above="@id/ip_edit_text"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/title_ip" />

                <View
                    style="@style/divider_line"
                    android:layout_alignParentBottom="true"
                    android:background="@color/sl_terbium_green"/>

            </RelativeLayout>

            <!--set GONE HERE-->
            <RelativeLayout
                android:id="@+id/portView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_personal_info_height"
                android:layout_marginTop="@dimen/space_S"
                android:visibility="visible">

                <EditText
                    android:id="@+id/port_edit_text"
                    style="@style/l_light_gray"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="@color/transparent"
                    android:padding="0dp"
                    android:singleLine="true"
                    android:digits="0123456789."
                    android:inputType="numberDecimal"/>

                <TextView
                    style="@style/m_bright_green"
                    android:layout_above="@id/port_edit_text"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/title_port" />

                <View
                    android:id="@+id/v"
                    style="@style/divider_line"
                    android:layout_alignParentBottom="true"
                    android:background="@color/sl_terbium_green" />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/checkIPButton"
                style="@style/m_silicon_grey"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space_S"
                android:layout_gravity="center"
                android:background="@color/sl_terbium_green"
                android:text="@string/title_check_ip"
                android:textAllCaps="true"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/txtStatus"
                style="@style/sm_silicon_grey"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space_M"
                android:layout_gravity="bottom|end"
                android:textAlignment="center"
                android:text="VNPT - Technology"
                android:textAllCaps="true"
                android:visibility="invisible"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>